# sway_assistant

./: .rustc_info.json  Cargo.toml  sway_assistant.sha256sum
.github/workflows/: ci.yaml  release.yaml
src/: main.rs
test/: end_to_end_test.sh
