[package]
name = "sway_assistant"
version = "1.0.0"
edition = "2021"
description = "CLI to arrange two monitors in Sway"
authors = ["Andrew Thorp <andrew.thorp.dev@gmail.com>"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
swayipc = "3.0.3"

[dev-dependencies]
serde_json = "1.0.139"
